[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-dashboard"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=air_passenger_app --cov-report=term-missing --cov-report=html"
